<resources>
    <string name="app_name">CrossEBank</string>
    <string name="google_map_api_key">AIzaSyDd7iNuIulKY_fwWFqF9U9EBocSAcBdqHg</string>
    <string name="news">Tin tức</string>
    <string name="market">Thị trường</string>
    <string name="place">Vị trí</string>
    <string name="setting">Cài đặt</string>
    <string name="calculator">Máy tính</string>
    <string name="profile">Cá nhân</string>
    <string name="interest_rate">Lãi suất</string>
    <string name="interest_rate_caps">LÃI SUẤT</string>
    <string name="exchange_rate">Ngoại tệ</string>
    <string name="coin">Coin</string>
    <string name="account">Tài khoản</string>
    <string name="gold">Vàng</string>
    <string name="personal">Cá nhân</string>
    <string name="Enterprise">Doanh nghiệp</string>
    <string name="bankLc">Ngân hàng</string>
    <string name="buy_cash">Mua TM</string>
    <string name="buy_card">Mua CK</string>
    <string name="buy">Mua</string>
    <string name="sell">Bán</string>
    <string name="deposit">Tiền gửi</string>
    <string name="unlimited">Không kỳ hạn</string>
    <string name="unlimited_acronym">KKH</string>
    <string name="one_month">1 TH</string>
    <string name="two_month">2 TH</string>
    <string name="three_month">3 TH</string>
    <string name="six_month">6 TH</string>
    <string name="nine_month">9 TH</string>
    <string name="twelve_month">12 TH</string>
    <string name="eight_teen_month">18 TH</string>
    <string name="twenty_four_month">24 TH</string>
    <string name="thirty_six_month">36 TH</string>
    <string-array name="deposit_period">
        <item>@string/unlimited</item>
        <item>@string/one_month</item>
        <item>@string/two_month</item>
        <item>@string/three_month</item>
        <item>@string/six_month</item>
        <item>@string/nine_month</item>
        <item>@string/twelve_month</item>
        <item>@string/twenty_four_month</item>
        <item>@string/thirty_six_month</item>
    </string-array>
    <string name="total_interest_money">Tổng tiền lãi (đ)</string>
    <string name="total_receive_money">Tổng nhận (đ)</string>
    <string name="time_count">Đợt thứ</string>
    <string name="sending_initial_money">Gửi gốc\n(đ)</string>
    <string name="recive_interest_money">Nhận lãi\n(đ)</string>
    <string name="total_recieve">Tổng nhận\n(đ)</string>
    <string name="total_saving_money">SỐ TIỀN GỬI</string>
    <string name="time">KỲ HẠN</string>
    <string name="time_saving">THỜI GIAN GỬI</string>
    <string name="month">Tháng</string>
    <string name="year">Năm</string>
    <string name="type_with_draw">Rút lãi định kì</string>
    <string name="type_with_draw_end">Lãi gộp</string>
    <string name="calculate_saving_money">Tính lãi gửi</string>
    <string name="calculate_loan_money">Tính lãi vay</string>
    <string name="loan_money_cap_">SỐ TIỀN VAY</string>
    <string name="principal_balance">DƯ NỢ GỐC</string>
    <string name="principal_balance_decreased">DƯ NỢ GIẢM DẦN</string>
    <string name="time_update">Thời gian cập nhật</string>
    <string name="choose_area">Chọn khu vực</string>
    <string name="nearest_area">Địa điểm gần đây</string>
    <string name="search">Tìm kiếm</string>
    <string name="error_login">Sai tài khoản hoặc mật khẩu</string>
    <string name="error_atm">Vui lòng nhập số thẻ ATM</string>
    <string name="error_password">Vui lòng nhập password</string>
    <string name="error_policy">Chưa đồng ý điều khoản</string>
    <string name="register">Đăng kí tài khoản</string>
    <string name="paymen_account">Tài khoản thanh toán</string>
    <string name="nummber_account">Số tài khoản</string>
    <string name="available_balances">Số dư khả dụng</string>
    <string name="saving_money_book">Tài khoản tiết kiệm</string>
    <string name="money_number">Số tiền gửi</string>
    <string name="interest_rate_per_year">%/Năm</string>
    <string name="branch_open">Chi nhánh mở</string>
    <string name="account_holder">Chủ tài khoản</string>
    <string name="history">Lịch sử giao dịch</string>
    <string name="tranfer">Chuyển tiền</string>
    <string name="open_saving_account">Mở tài khoản tiết kiệm</string>
    <string name="from_account">Tài khoản nguồn</string>
    <string name="create_saving_money_success">Tạo tài khoản tiết kiệm thành công!</string>
    <string name="transfer_money_atm_success">Gửi tiền thành công!</string>
    <string name="next">Tiếp tục</string>
    <string name="saving_info">Thông tin tài khoản tiết kiệm</string>
    <string name="error_saving_money">Mở tài khoản tiết kiệm không thành công. Số tiền giao dịch nhỏ hơn hạn mức 3,000,000 VND/1 lần</string>
    <string name="message_withdraw_money">Sổ tiết kiệm chưa đến ngày đáo hạn nên số tiền  rút sẽ được tính theo lãi suất không kỳ hạn</string>
    <string name="name">Tên</string>
    <string name="phone">Số điện thoại</string>
    <string name="password">Mật khẩu</string>
    <string name="register_">Đăng kí</string>
    <string name="err_msg_email">Email không hợp lệ</string>
    <string name="err_msg_name">Vui lòng nhập tên người dùng</string>
    <string name="err_msg_password">Mật khẩu không hợp lệ</string>
    <string name="register_success">Đăng ký tài khoản thành công</string>
    <string name="err_msg_phone">Vui long nhập số điện thoại</string>
    <string name="change_password">Đổi mật khẩu</string>
    <string name="new_password">Mật khẩu mới</string>
    <string name="change_password_success">Đổi mật khẩu thành công</string>
    <string name="forgot_password">Quên mật khẩu?</string>
    <string name="account_bank">Tài khoản ngân hàng</string>
</resources>
