<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="20dp"
    android:paddingRight="20dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="wrap_content">

        <TextView
            android:layout_marginTop="20dp"
            android:layout_width="wrap_content"
            android:text="0 đ"
            android:textSize="20sp"
            android:textColor="@color/colorPrimary"
            android:layout_gravity="center_horizontal"
            android:layout_height="wrap_content" />

        <include
            layout="@layout/item_money_edit_text"
            />

        <include
            layout="@layout/item_interest_edit_text"
            />

        <include
            layout="@layout/item_time_edit_text"
            />

        <include
            layout="@layout/item_saving_time_edit_text"
            />


        <include
            layout="@layout/item_button_option_calculate_money"
            />

        
        <LinearLayout
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:background="@drawable/bg_white_border_primary"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:gravity="center_vertical"
            android:layout_height="50dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/total_interest_money"
                android:textColor="@color/colorBlack"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="0"
                android:textSize="20sp"
                android:textColor="@color/colorPrimary"
                />

        </LinearLayout>



        <LinearLayout
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:background="@drawable/bg_white_border_primary"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:gravity="center_vertical"
            android:layout_height="50dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/total_receive_money"
                android:textColor="@color/colorBlack"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="0"
                android:textSize="20sp"
                android:textColor="@color/colorPrimary"
                />

        </LinearLayout>


        <LinearLayout
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:background="@drawable/bg_white_border_primary"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:gravity="center_vertical"
            android:layout_weight="4"
            android:layout_height="50dp">

            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/time_count"
                android:gravity="center"
                android:textColor="@color/colorBlack"
                />

            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:layout_height="wrap_content"
                android:text="@string/sending_initial_money"
                android:textColor="@color/colorBlack"
                />

            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:layout_height="wrap_content"
                android:text="@string/recive_interest_money"
                android:textColor="@color/colorBlack"
                />

            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:layout_height="wrap_content"
                android:text="@string/total_recieve"
                android:textColor="@color/colorBlack"
                />

        </LinearLayout>


    </LinearLayout>

</ScrollView>