<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="20dp">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="10dp"
        app:cardUseCompatPadding="true">

        <LinearLayout
            android:id="@+id/layoutBank"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="16dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/txtPaymentAcountTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/paymen_account"
                    android:textColor="@color/colorBlack"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/txtNumberAccountTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/txtPaymentAcountTitle"
                    android:layout_marginTop="10dp"
                    android:text="@string/nummber_account"
                    android:textAllCaps="true"
                    android:textSize="15sp" />


                <ImageView
                    android:id="@+id/imgBankLogo"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:src="@drawable/vcb"

                    />

            </RelativeLayout>


            <TextView
                android:id="@+id/txtNumberAcount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="041942002564"
                android:textColor="@color/colorBlack"
                android:textSize="20sp"
                android:textStyle="bold" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:text="@string/available_balances"
                android:textAllCaps="true"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/txtMoney"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:gravity="right"
                android:text="2,212,375 VND"
                android:textAllCaps="true"
                android:textColor="@color/colorPrimary"
                android:textSize="20sp" />

        </LinearLayout>

    </android.support.v7.widget.CardView>

</RelativeLayout>